2008-02-25  Michael Stucki  <michael@typo3.org>

	* Follow-up on issue #7526: Add configuration option $TYPO3_CONF_VARS[BE][loginNewsTitle] to t3lib/config_default.php (Thanks to Steffen Kamper)
	* Follow-up on issue #6037: Replace leading character (makes sure that strpos() result is not 0) with result type check (Thanks to Oliver Hader)

2008-02-23  Oliver Hader  <oh@inpublica.de>

	* Followup to #6885: Changing $GLOBALS['TSFE'] to $this inside tslib_fe

2008-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.2.0beta2a

2008-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Follow-up on issue #7625: Completely removed the CSS instruction in question as it seemed to be not needed and only caused extra fuss

2008-02-22  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta2

2008-02-22  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7445: Malformed translated locallang causes PHP crash (thanks to Francois Suter)
	* Issue #7307: Bugfixes for "Open Documents" extension - Part 1
	  - Changed getSetUpdateSignal() function in t3lib_BEfunc and added hook possibility
	  - Used hook for tx_opendocs to be updated when opening & closing a document
	  - Several bugfixes and new features for tx_opendocs

2008-02-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7247: Add hook for warning messages within Help->About modules and improve existing warning messages
	* Fixed bug #7605: Backend Alignment Problems in Internet Explorer
	* Fixed bug #7598: Fix module menu alignment and hover in Internet Explorer

2008-02-22  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7587: Accesscheck for Workspaceselector, credits Steffen Kamper
	* Fixed bug #7588: Accesscheck for clearCache
	* Added feature #7592: Enable tabs for be_users, credits Francois Suter
	* Added feature #6846: enable Tabs in tt_content, credits Steffen Kamper
	* Fixed bug #7608: Keys for clear-cache labels must be renamed